Fix sizing on mobile

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -127,11 +127,11 @@
   }
 
   .brand {
-    font-size: 48px;
+    font-size: 7vw;
   }
 
   .description {
-    font-size: 12px;
+    font-size: 2vw;
   }
 
   .accent {
